--- a/trunk/shaman/translations/pt_BR/shaman_pt_BR.po
+++ b/trunk/shaman/translations/pt_BR/shaman_pt_BR.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-24 21:55+0200\n"
+"POT-Creation-Date: 2008-11-24 22:12+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -13,7 +13,8 @@ msgstr ""
 "X-Generator: Translate Toolkit 1.2.0\n"
 
 #. (obsolete)
-#: #1
+#: 
+        #1
 msgctxt "#1"
 msgid "Please wait, fetching items..."
 msgstr "Por favor aguarde, buscando itens..."
@@ -239,6 +240,7 @@ msgstr ""
 "instalados"
 
 #: BuildingHandler#19
+#, fuzzy
 msgid ""
 "You are about to install <b>%n package(s)</b> from source. Building from "
 "source<br>can give some advantages, however is very slow.<br>If you are not "
@@ -247,7 +249,6 @@ msgid ""
 "configuration to improve your building performance."
 msgstr ""
 "\n"
-"            \n"
 "            \n"
 "        "
 
@@ -540,24 +541,36 @@ msgid "Makepkg Configuration"
 msgstr "Configuração do Makepkg"
 
 #: ConfigDialog#50
+#, fuzzy
 msgid "CFlags"
 msgstr ""
+"\n"
+"            "
 
 #: ConfigDialog#51
+#, fuzzy
 msgid "CXXFlags"
 msgstr ""
+"\n"
+"            "
 
 #: ConfigDialog#52
+#, fuzzy
 msgid "BuildEnv"
 msgstr ""
+"\n"
+"            "
 
 #: ConfigDialog#53
 msgid "Options"
 msgstr "Opções"
 
 #: ConfigDialog#54
+#, fuzzy
 msgid "Doc_Dirs"
 msgstr ""
+"\n"
+"            "
 
 #: ConfigDialog#55
 msgid "Build Environment"
@@ -610,12 +623,18 @@ msgid "Repositories"
 msgstr "Repositórios"
 
 #: ConfigDialog#66
+#, fuzzy
 msgid "Pacman"
 msgstr ""
+"\n"
+"            "
 
 #: ConfigDialog#67
+#, fuzzy
 msgid "ABS"
 msgstr ""
+"\n"
+"            "
 
 #: ConfigDialog#68
 msgid "Enter Here the Repository's Name"
@@ -765,23 +784,35 @@ msgstr "Aguardando"
 
 # Do not translate
 #: ConfigDialog#95
+#, fuzzy
 msgid "Core"
 msgstr ""
+"\n"
+"            "
 
 # Do not translate
 #: ConfigDialog#96
+#, fuzzy
 msgid "Extra"
 msgstr ""
+"\n"
+"            "
 
 # Do not translate
 #: ConfigDialog#97
+#, fuzzy
 msgid "Community"
 msgstr ""
+"\n"
+"            "
 
 # Do not translate
 #: ConfigDialog#98
+#, fuzzy
 msgid "Testing"
 msgstr ""
+"\n"
+"            "
 
 # sync is a command, so it should not be translated
 #: ConfigDialog#99
@@ -1065,34 +1096,49 @@ msgid "KDEMod 4 Unstable Repository (Testers only!)"
 msgstr "Repositório Unstable do KDEMod 4 (só para testers!)"
 
 #: ConfigDialog#139
+#, fuzzy
 msgid ""
 "Here you can choose what repositories to use between Arch Linux's official "
 "ones. Please note that packages from Unstable and Testing may break your "
 "system."
 msgstr ""
+"\n"
+"            "
 
 #: ConfigDialog#140
+#, fuzzy
 msgid ""
 "KDEMod is an improved version of KDE, an Arch Linux exclusive. Featuring an "
 "improved Qt build, compatible with Arch Linux standard Qt's, an improved "
 "theme, and lots of addons, KDEMod is the best way to taste the ease and the "
 "power of KDE with the simplicity and the power of Arch."
 msgstr ""
+"\n"
+"            "
 
 #: ConfigDialog#141
+#, fuzzy
 msgid ""
 "You can extend your packages choice by adding other repositories. Third-"
 "Party Repositories act just as normal ones, and will be accessible through "
 "both Shaman and Pacman."
 msgstr ""
+"\n"
+"            "
 
 #: ConfigDialog#142
+#, fuzzy
 msgid "Use the following language:"
 msgstr ""
+"\n"
+"            "
 
 #: ConfigDialog#143
+#, fuzzy
 msgid "Disable Tray Icon"
 msgstr ""
+"\n"
+"            "
 
 #: EditPBuild#1
 msgid "Saving"
@@ -1107,10 +1153,14 @@ msgstr ""
 "Deseja salvá-lo?"
 
 #: LocalPackage#1
+#, fuzzy
 msgid "Install Package from File"
 msgstr ""
+"\n"
+"            "
 
 #: LocalPackage#2
+#, fuzzy
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
 "html40/strict.dtd\">\n"
@@ -1123,10 +1173,15 @@ msgid ""
 "Sans';\"><span style=\" font-weight:600;\">Local Package "
 "Installation</span></p></body></html>"
 msgstr ""
+"\n"
+"            "
 
 #: LocalPackage#3
+#, fuzzy
 msgid "Show..."
 msgstr ""
+"\n"
+"            "
 
 #: LocalPackage#4
 #, fuzzy
@@ -1141,27 +1196,38 @@ msgid "Cancel"
 msgstr "Cancelar"
 
 #: LocalPackage#6
+#, fuzzy
 msgid "Install Package"
 msgstr ""
+"\n"
+"            "
 
 #: LocalPackageDialog#1
+#, fuzzy
 msgid "Package is not installed"
 msgstr ""
+"\n"
+"            "
 
 #: LocalPackageDialog#2
+#, fuzzy
 msgid "Version %1 of this package is already installed"
 msgstr ""
+"\n"
+"            "
 
 #: LocalPackageDialog#3
+#, fuzzy
 msgid "All dependencies are satisfied"
 msgstr ""
+"\n"
+"            "
 
 #: LocalPackageDialog#4
 #, fuzzy
 msgid "%n package(s) will be installed as dependencies"
 msgstr ""
 "\n"
-"            \n"
 "            \n"
 "        "
 
@@ -1920,16 +1986,25 @@ msgstr "Nome"
 
 # Exit Shaman Shortcut
 #: MainWindow#132
+#, fuzzy
 msgid "Ctrl+Q"
 msgstr ""
+"\n"
+"            "
 
 #: MainWindow#133
+#, fuzzy
 msgid "Name and Description"
 msgstr ""
+"\n"
+"            "
 
 #: MaintenanceBar#1
+#, fuzzy
 msgid "Please choose an action to start maintenance..."
 msgstr ""
+"\n"
+"            "
 
 #: MaintenanceBar#2
 #, fuzzy
@@ -1998,8 +2073,11 @@ msgid "Abort"
 msgstr "Cancelar"
 
 #: MaintenanceBar#13
+#, fuzzy
 msgid "System Maintenance"
 msgstr ""
+"\n"
+"            "
 
 #: MaintenanceBar#14
 #, fuzzy
@@ -2102,8 +2180,11 @@ msgid "Sync could not be executed!!"
 msgstr "Sync não pode ser executado!!"
 
 #: MaintenanceBar#30
+#, fuzzy
 msgid "Maintenance Actions"
 msgstr ""
+"\n"
+"            "
 
 #: NewsViewer#1
 msgctxt "NewsViewer#1"
@@ -2625,18 +2706,18 @@ msgid "<b>%1</b> will be freed"
 msgstr "<b>%1</b> será liberado"
 
 #: ReviewQueueDialog#16
+#, fuzzy
 msgid "Remove <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
 "            \n"
-"            \n"
 "        "
 
 #: ReviewQueueDialog#17
+#, fuzzy
 msgid "Install/Upgrade <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            \n"
 "            \n"
 "        "
 
@@ -2740,12 +2821,12 @@ msgstr ""
 "Clique aqui para mais detalhes."
 
 #: ShamanTrayIcon#16
+#, fuzzy
 msgid ""
 "Upgradeable package(s): %n.\n"
 "Click here to upgrade your System."
 msgstr ""
 "\n"
-"            \n"
 "            \n"
 "        "
 
@@ -2773,12 +2854,12 @@ msgid "To be Upgraded"
 msgstr "A serem atualizados"
 
 #: SysUpgradeDialog#4
+#, fuzzy
 msgid ""
 "<b>Upgradeable package(s): %n</b> You can either<br> upgrade immediately or "
 "add it to the current Queue<br> and process it later."
 msgstr ""
 "\n"
-"            \n"
 "            \n"
 "        "
 
@@ -3419,6 +3500,7 @@ msgstr ""
 "Chinês</p></body></html>"
 
 #: aboutDialog#13
+#, fuzzy
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
 "html40/strict.dtd\">\n"
@@ -3603,6 +3685,8 @@ msgid ""
 "right:0px; -qt-block-indent:0; text-indent:0px; font-weight:600;\"><span "
 "style=\" font-weight:400;\">Macedonian Translator</span></p></body></html>"
 msgstr ""
+"\n"
+"            "
 
 #: authDialog#1
 msgid "Root Password Required"
@@ -3748,6 +3832,7 @@ msgid "Filter"
 msgstr "Filtro"
 
 #: logViewer#7
+#, fuzzy
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
 "html40/strict.dtd\">\n"
@@ -3759,6 +3844,8 @@ msgid ""
 "margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; "
 "font-family:'Liberation Sans'; font-size:9pt;\"></p></body></html>"
 msgstr ""
+"\n"
+"            "
 
 # close the dialog
 #: logViewer#8
@@ -3767,8 +3854,11 @@ msgid "Close"
 msgstr "Fechar"
 
 #: logViewer#9
+#, fuzzy
 msgid "dd/MM/yyyy"
 msgstr ""
+"\n"
+"            "
 
 #: newsDialog#1
 msgid "Arch Linux News"
@@ -3780,12 +3870,18 @@ msgid "Title"
 msgstr "Título"
 
 #: newsDialog#3
+#, fuzzy
 msgid "Link"
 msgstr ""
+"\n"
+"            "
 
 #: newsDialog#4
+#, fuzzy
 msgid "status"
 msgstr ""
+"\n"
+"            "
 
 #: newsDialog#5
 msgctxt "newsDialog#5"
